tests/snapshots/deserializer__object_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {},
}

