tests/snapshots/deserializer__object_nested.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{\"a\": {\"b\": true}}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("a"): HeapReference(
            *1,
        ),
    },
    1: Object {
        OneByte("b"): Bool(
            true,
        ),
    },
}

