tests/snapshots/deserializer__object_one_property.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{\"a\": 1}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("a"): I32(
            1,
        ),
    },
}

