tests/snapshots/deserializer__object_smi_property_key.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{[1]: 3}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        1: I32(
            3,
        ),
    },
}

