tests/snapshots/deserializer__object_smi_property_key_as_str.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{\"1\": 5}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        1: I32(
            5,
        ),
    },
}

