tests/snapshots/deserializer__object_smi_property_key_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n{[-1]: 4}"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("-1"): I32(
            4,
        ),
    },
}

