tests/snapshots/deserializer__regexp.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n/asd/gi"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: RegExp {
        pattern: OneByte("asd"),
        flags: 3,
    },
}

