tests/snapshots/deserializer__regexp_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew RegExp(\"(?:)\")"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: RegExp {
        pattern: OneByte("(?:)"),
        flags: 0,
    },
}

